--- a/plugins/system/language/en-GB.plg_system_helix3.ini
+++ b/plugins/system/language/en-GB.plg_system_helix3.ini
@@ -1,4 +1,4 @@
-;Megamenu
+; Megamenu
 HELIX_MENU="Helix Megamenu Options"
 HELIX_SUB_MENU="Helix Menu Options"
 HELIX_MENU_SHOW_TITLE="Show Menu Title"
@@ -21,7 +21,7 @@ HELIX_NO="NO"
 HELIX_MENU_DROPDOWN_POSITION="Dropdown Position"
 HELIX_MENU_DROPDOWN_POSITION_DESC="Set the position of the dropdown under this menu item."
 
-;Page Title
+; Page Title
 HELIX_PAGE_TITLE="Helix Page Title"
 ENABLE_PAGE_TITLE="Enable Page Title"
 ENABLE_PAGE_TITLE_DESC="Enable this option show page title after just below the header."
@@ -36,7 +36,7 @@ PAGE_BACKGROUND_COLOR_DESC="Background color for the title area."
 PAGE_BACKGROUND_IMAGE="Background Image"
 PAGE_BACKGROUND_IMAGE_DESC="Background image for the title area."
 
-;Blog
+; Blog
 BLOG_OPTIONS="<i class='fa fa-joomla fa-fw'></i>Helix Blog Options"
 BLOG_POST_FORMAT_STANDARD="<i class='fa fa-thumb-tack fa-fw'></i> Standard"
 BLOG_POST_FORMAT_VIDEO="<i class='fa fa-film fa-fw'></i> Video"
@@ -45,6 +45,9 @@ BLOG_POST_FORMAT_AUDIO="<i class='fa fa-music fa-fw'></i> Audio"
 BLOG_POST_FORMAT_LINK="<i class='fa fa-link fa-fw'></i> Link"
 BLOG_POST_FORMAT_QUOTE="<i class='fa fa-quote-left fa-fw'></i> Quote"
 BLOG_POST_FORMAT_STATUS="<i class='fa fa-comment-o fa-fw'></i> Status"
+BLOG_POST_FEATURE_IMAGE="Featured Image"
+BLOG_POST_FEATURE_IMAGE_ALTER_TEXT="Feature Image Alt Text"
+BLOG_POST_FEATURE_IMAGE_ALTER_TEXT_DESCRIPTION="Insert Feature image's alter text"
 BLOG_POST_FORMAT_GALLERY_LABEL="Upload Gallery Images"
 BLOG_POST_FORMAT_GALLERY_DESCRIPTION="Select one or more images"
 BLOG_POST_FORMAT_AUDIO_LABEL="Audio Embed Code"
